adding hyper links

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 
   
 
-<section class="padd margin_10">
+<a href="file:///Users/shankar/Documents/notnarayan.github.io/DDX-github/patient_1.html">
+  <section class="padd margin_10">
 	<div class="panel panel-default doctor_color">
   <!-- Default panel contents -->
   <div class="panel-body">
@@ -131,7 +132,9 @@
       <div><span class="condition">CCCP</span><span class="doctor_name label label-default">CP</span><span class="doctor_name label label-info">AP</span></div>
   </div>
 </section>
+</a>
 
+<a href="file:///Users/shankar/Documents/notnarayan.github.io/DDX-github/patient_1.html">
 <section class="padd margin_10">
   <div class="panel panel-default doctor_color">
   <!-- Default panel contents -->
@@ -141,6 +144,7 @@
       <div><span class="condition">CCCP</span><span class="doctor_name label label-default">CP</span></div>
     </div>
 </section>
+</a>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
