--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
   
 
-<a href="file:///Users/shankar/Documents/notnarayan.github.io/DDX-github/patient_1.html">
+<a href="http://notnarayan.github.io/DDX/patient_1.html">
   <section class="padd margin_10">
 	<div class="panel panel-default doctor_color">
   <!-- Default panel contents -->
@@ -134,7 +134,7 @@
 </section>
 </a>
 
-<a href="file:///Users/shankar/Documents/notnarayan.github.io/DDX-github/patient_1.html">
+<a href="http://notnarayan.github.io/DDX/patient_1.html">
 <section class="padd margin_10">
   <div class="panel panel-default doctor_color">
   <!-- Default panel contents -->
