--- a/patient_1.html
+++ b/patient_1.html
@@ -73,11 +73,14 @@
 <section class="padd margin_10">
 	<div class="panel panel-default doctor_color">
   <!-- Default panel contents -->
+ <a href="http://notnarayan.github.io/DDX/">
   <div class="panel-heading"><p>ADITYA DIPANKAR</p>
-  <a href="">add number</a>
-  <a href="">add existing condition</a>
-  <a href="">add allergies</a>
+    <a href="">add number</a>
+    <a href="">add existing condition</a>
+    <a href="">add allergies</a>
   </div>
+  </a> 
+  
   <div class="panel-body">
     <div>
 		<h6>PATIENT STATUS: IN-PATIENT ROOM NO. 9</h6>
