--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">APOLLO SUPER SPECIALITY HOSPITAL</a>
+      <a class="navbar-brand" href="#">APOLLO SUPER SPECIALITY</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
