fixed button style for mobile

--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
 
 <div class="margin_10 btn-group btn-group-justified">
   <div class="btn-group">
-    <button type="button" class="btn btn-danger" onClick="filterData('urgent')">URGENT</button>
+    <button type="button" class="btn btn-danger btn_10" onClick="filterData('urgent')">URGENT</button>
   </div>
   <div class="btn-group">
-    <button type="button" class="btn btn-warning" onClick="filterData('unstable')">UNSTABLE</button>
+    <button type="button" class="btn btn-warning btn_10" onClick="filterData('unstable')">UNSTABLE</button>
   </div>
   <div class="btn-group">
-    <button type="button" class="btn btn-info" onClick="filterData('stable')">STABLE</button>
+    <button type="button" class="btn btn-info btn_10" onClick="filterData('stable')">STABLE</button>
   </div>
 <div class="btn-group">
-    <button type="button" class="btn btn-default" onClick="filterData('all')">ALL</button>
+    <button type="button" class="btn btn-default btn_10" onClick="filterData('all')">ALL</button>
   </div></div>
  <div class="margin_10"><button class="btn btn-default" data-toggle="modal" data-target="#addPatient">Add Patient</button></div>
  <!-- addPatient -->
