--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">APOLLO SUPER SPECIALITY</a>
+      <a class="navbar-brand" href="#">APOLLO HOSPITAL</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
