--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
               
               <div class="btn-group btn-group-justified">
                 <div class="btn-group">
-                    <button type="button" class="btn btn-danger btn-default">URGENT</button>
+                    <button type="button" class="btn btn-danger btn_10 btn-default">URGENT</button>
                   </div>
                   <div class="btn-group">
-                    <button type="button" class="btn btn-warning btn-default">UNSTABLE</button>
+                    <button type="button" class="btn btn-warning btn_10 btn-default">UNSTABLE</button>
                   </div>
                   <div class="btn-group">
-                    <button type="button" class="btn btn-info btn-default">STABLE</button>
+                    <button type="button" class="btn btn-info btn_10 btn-default">STABLE</button>
                 </div></div>
 
         </form>
@@ -173,7 +173,7 @@
   </div>
 </div>
   
-<section id='patient' class="padd margin_10"></section>
+< section id='patient' class="padd margin_10"></section>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
