patient medical information
added investigations, diagnosis, medications and treatment on patient
page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                       "</div></div></a></div>";
       
       param = data[i].pid;               
-      console.log(param);
+      //console.log(param);
     }
     document.getElementById('patient').innerHTML = string;
   }
