--- a/patient.html
+++ b/patient.html
@@ -110,7 +110,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="">APOLLO SUPER SPECIALITY HOSPITAL</a>
+      <a class="navbar-brand" href="">APOLLO HOSPITAL</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
