--- a/patient.html
+++ b/patient.html
@@ -110,7 +110,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="">APOLLO HOSPITAL</a>
+      <a class="navbar-brand" href="">DDX </a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -153,6 +153,7 @@
 
 <div class="padd margin_10" id="patient_medical_history"></div>
 <div class="padd margin_10" id="patient_diagnosis"></div>
+<div class="margin_10"><button type="submit" class="btn btn-default">add</button></div>
 <div class="padd margin_10" id="patient_investigations"></div>
 <div class="padd margin_10" id="patient_treatment"></div>
 <div class="padd margin_10" id="patient_medication"></div>
