--- a/patient.html
+++ b/patient.html
@@ -132,7 +132,7 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default btn_10">Submit</button>
       </form>
       <!-- <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
@@ -152,11 +152,49 @@
 </nav>
 
 <div class="padd margin_10" id="patient_medical_history"></div>
+
+
+
 <div class="padd margin_10" id="patient_diagnosis"></div>
-<div class="margin_10"><button type="submit" class="btn btn-default">add</button></div>
+<div class="margin_10"><button class="btn btn-default btn-sm" data-toggle="modal" data-target="#addDiagnosis">add</button></div>
+ <!-- addPatient -->
+<div class="modal fade" id="addDiagnosis" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">New Patient</h4>
+      </div>
+      <div class="modal-body">
+        <form>
+             <div class="form-group">
+              <label for="exampleInputEmail1">NAME</label>
+              <input type="email" class="form-control" id="patient_name" placeholder="Enter name"></div>
+
+             <div class="form-group">
+              <label for="exampleInputEmail1">ID</label>
+              <input type="email" class="form-control" id="patient_id" placeholder="Enter patient ID"></div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" onclick="postContactToGoogle()" >Save </button>
+      </div>
+    </div>
+  </div>
+</div>
+ 
+</div>
+
+
 <div class="padd margin_10" id="patient_investigations"></div>
+<div class="margin_10"><button type="submit" class="btn btn-default btn-sm">add</button></div>
+
 <div class="padd margin_10" id="patient_treatment"></div>
+<div class="margin_10"><button type="submit" class="btn btn-default btn-sm">add</button></div>
+
 <div class="padd margin_10" id="patient_medication"></div>
+<div class="margin_10"><button type="submit" class="btn btn-default btn-sm">add</button></div>
 
 
 
