--- a/patient.html
+++ b/patient.html
@@ -163,17 +163,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">New Patient</h4>
+        <h4 class="modal-title" id="myModalLabel">Add diagnosic</h4>
       </div>
       <div class="modal-body">
         <form>
              <div class="form-group">
-              <label for="exampleInputEmail1">NAME</label>
-              <input type="email" class="form-control" id="patient_name" placeholder="Enter name"></div>
-
-             <div class="form-group">
-              <label for="exampleInputEmail1">ID</label>
-              <input type="email" class="form-control" id="patient_id" placeholder="Enter patient ID"></div>
+              <input type="text" class="form-control" id="patient_name" placeholder="write here"></div>
         </form>
       </div>
       <div class="modal-footer">
@@ -182,8 +177,7 @@
       </div>
     </div>
   </div>
-</div>
- 
+ </div>
 </div>
 
 
