add diagnosis form

--- a/patient.html
+++ b/patient.html
@@ -168,7 +168,7 @@
       <div class="modal-body">
         <form>
              <div class="form-group">
-              <input type="text" class="form-control" id="patient_name" placeholder="write here"></div>
+              <input type="text" class="form-control" id="patient_name"></div>
         </form>
       </div>
       <div class="modal-footer">
